--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1023,7 +1023,7 @@
                                                 </div>
                                                 <div class="case-body-block">
                                                     <p class="case-body-title">Бизнес-эффект</p>
-                                                    <p class="case-body-description">Повышает качество обслуживания клиентов через сопоставление психотипов менеджеров и клиентов.</br>Оптимизирует скрипты на основе анализа успешных звонков.</p>Выявляет лучшие практики для обучения персонала</p>
+                                                    <p class="case-body-description">Повышает качество обслуживания клиентов через сопоставление психотипов менеджеров и клиентов.</br>Оптимизирует скрипты на основе анализа успешных звонков.</br>Выявляет лучшие практики для обучения персонала</p>
                                                 </div>
                                             </div>
                                             <div class="case-body">
