--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -671,6 +671,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    z-index: 3;
 }
 
 .activity-title {
@@ -985,6 +987,10 @@ main {
   }
 }
 
+
+.tutorials-block {
+    margin-top: 140px;
+}
 
 .tutorials-block, .tutorials-block-mobile {
     display: flex;
