--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -663,3 +663,10 @@ p, h1, h2, h3, h4, h5 {
         font-size: 10px;
     }
 }
+
+@media screen and (max-width: 650px) {
+    .rag-process {
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+}
