--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -257,9 +257,10 @@
                         </div>
                     </div>
                 </section>
+            </div>
+        </div>
          <div class="wrapper">
         <div class="container">
-            <main>
                 <section>
                     <div class="tutorials-block desktop-only">
                         <h2 class="tutorials-title">как обучает эксперт,<br>которому доверяют</h2>
@@ -1081,11 +1082,18 @@
                         </div>
                     </div>
                 </section>
-                <section>
+            </div>
+        </div>
+            </main>
+            
+            <div class="wrapper">
+                <div class="container">
+                    <section>
                     {% include 'main/_action_form.html' %}
                 </section>
-            </main>
-            {% include 'main/_footer.html' %}
+                    {% include 'main/_footer.html' %}
+                </div>
+            </div>
         </div>
     </div>
 </body>
