--- a/main/templates/main/ai-solutions.html
+++ b/main/templates/main/ai-solutions.html
@@ -579,45 +579,7 @@
     <div class="transition-3">
         <div class="wrapper">
             <div class="container">
-                <footer class="footer">
-                    <div class="footer-nav-container">
-                        <div class="footer-logo-container">
-                            <img src="{% static 'img/logo.png' %}" alt="" class="footer-logo">
-                        </div>
-                        <div class="footer-nav">
-                            <div class="footer-nav-block">
-                                <p class="footer-nav-item-title">НАВИГАЦИЯ</p>
-                                <div class="footer-nav-items">
-                                    <p class="footer-nav-item">Обучение</p>
-                                    <p class="footer-nav-item">Эксперт курса</p>
-                                    <p class="footer-nav-item">Команда</p>
-                                    <p class="footer-nav-item">Программа</p>
-                                </div>
-                            </div>
-                            <div class="footer-nav-block">
-                                <p class="footer-nav-item-title">ДОКУМЕНТЫ</p>
-                                <div class="footer-nav-items doc">
-                                    <p class="footer-nav-item">Политика конфиденциальности</p>
-                                    <p class="footer-nav-item">Пользовательское соглашение</p>
-                                    <p class="footer-nav-item">Публичная оферта</p>
-                                </div>
-                            </div>
-                            <div class="footer-nav-block">
-                                <p class="footer-nav-item-title">КОНТАКТЫ</p>
-                                <div class="footer-nav-items footer-nav-items-contacts">
-                                    <p class="footer-nav-item">телефон +7 (800) 333-48-77</br>(звонок бесплатный)</p>
-                                    <p class="footer-nav-item">телеграм-канал кибер-миша</br>@cyber_misha</p>
-                                    <p class="footer-nav-item">служба заботы кибер-миша</br>@cybermishahelp</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footer-nav-container">
-                        <p class="footer-description">© 2025 Black Mesa IT.</br>Все права защищены.</p>
-                        <p class="footer-description">ИП</br>ИНН: 7838107523 | ОГРН: 783801001</p>
-                        <p class="footer-description">Лицензия на образовательную деятельность</br>Nº Л035-01271-78/02037422 от 26.03.2025</p>
-                    </div>
-                </footer>
+                {% include 'main/_footer.html' %}
             </div>
         </div>
     </div>
