--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -670,3 +670,28 @@ p, h1, h2, h3, h4, h5 {
         align-items: center !important;
     }
 }
+
+
+
+.wrapper:has(.action-form) {
+    overflow: hidden;
+}
+
+
+.faq-back {
+    filter: blur(10px);
+}
+
+.tehnologies-back-left {
+    filter: blur(10px);
+}
+
+.header-nav-item-icon {
+    border-radius: 100%;
+    box-shadow: 0px 0px 10px 0px #C81BD9;
+}
+
+
+h2::first-letter {
+    text-transform: capitalize;
+}
