--- a/main/templates/main/_modal_request.html
+++ b/main/templates/main/_modal_request.html
@@ -44,7 +44,7 @@
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-.form-description {
+.form-description-modal {
     display: inline-block;
     max-width: 400px;
 }
@@ -83,7 +83,7 @@
       <input class="modal-input" id="rq-email" placeholder="Электронная почта">
       <input class="modal-input" id="rq-phone" placeholder="Номер телефона">
       <textarea class="modal-textarea" id="rq-desc" placeholder="Опишите, чем могу быть полезен"></textarea>
-      <p class="form-description" style="text-align:center; font-size:13px; color:rgba(255,255,255,0.6)">нажимая на кнопку “отправить”, вы даете согласие на обработку персональных данных и соглашаетесь  с политикой конфиденциальности</p>
+      <p class="form-description-modal" style="text-align:center; font-size:13px; color:rgba(255,255,255,0.6)">нажимая на кнопку “отправить”, вы даете согласие на обработку персональных данных и соглашаетесь  с политикой конфиденциальности</p>
       <div class="modal-actions"><button class="modal-submit" id="request-modal-submit">Отправить</button></div>
     </div>
   </div>
