--- a/main/templates/main/ai-solutions.html
+++ b/main/templates/main/ai-solutions.html
@@ -100,7 +100,7 @@
                         <h2 class="advantages-title">Преимущества</h2>
                         <p class="advantages-description">Наш подход — это честность, экспертиза и настоящая вовлечённость в ваш результат</p>
                         <div class="advantages-cards">
-                            <div class="adv-card adv1">
+                            <div class="adv-card advantages1">
                                 <img src="{% static 'main/img/corner_top_left.svg' %}" class="corner-svg corner-top-left" alt="">
                                 <img src="{% static 'main/img/corner_top_right.svg' %}" class="corner-svg corner-top-right" alt="">
                                 <img src="{% static 'main/img/corner_bottom_left.svg' %}" class="corner-svg corner-bottom-left" alt="">
